// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin css-no-assignment js : Compilation Error 1`] = `
"There are multiple anonymous css tags that would conflict. Differentiate each tag by assigning the output to a unique identifier
[0m [90m  7 | [39m[32m\`[39m[33m;[39m[0m
[0m [90m  8 | [39m[0m
[0m[31m[1m>[22m[39m[90m  9 | [39mcss[32m\`[39m[0m
[0m [90m    | [39m[31m[1m^[22m[39m[0m
[0m [90m 10 | [39m[32m  .red {[39m[0m
[0m [90m 11 | [39m[32m    color: red;[39m[0m
[0m [90m 12 | [39m[32m  }[39m[0m"
`;

exports[`Plugin display-name DisplayName: DisplayName.css 1`] = `
".cls1 {
color: ultra-red;
}"
`;

exports[`Plugin display-name FooBarBaz: display-name-FooBarBaz.css 1`] = `
".cls1 {
color: red;
}"
`;

exports[`Plugin display-name js : Compiled JS 1`] = `
"import styled from 'astroturf';

const Foo = () => {};

const bar = 'Bar';
Foo[bar]['baz'] =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FooBarBaz\\",
  styles: require(\\"./display-name-FooBarBaz.css\\"),
  attrs: null,
  kebabName: \\"foo-bar-baz\\",
  camelName: \\"fooBarBaz\\"
});
export default
/*#__PURE__*/
styled(FancyBox, null, {
  displayName: \\"DisplayName\\",
  styles: require(\\"./DisplayName.css\\"),
  attrs: null,
  kebabName: \\"display-name\\",
  camelName: \\"displayName\\"
});"
`;

exports[`Plugin element-shorthand FancyBox: element-shorthand-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;

@media (min-width: 420px) {
width: 96px;
height: 96px;
}

&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin element-shorthand js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75;
const FancyBox =
/*#__PURE__*/
styled(\\"div\\", null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./element-shorthand-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});"
`;

exports[`Plugin example js : Compiled JS 1`] = `
"const SIZE = 75;

const styles =
/*#__PURE__*/
require(\\"./example-styles.less\\");"
`;

exports[`Plugin example styles: example-styles.less 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Plugin hoist-import ButtonBase: hoist-import-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.cls1 {
display: inline-flex;
align-items: center;
justify-content: center;
border: 1px solid transparent;
}"
`;

exports[`Plugin hoist-import js : Compiled JS 1`] = `
"import { styled } from 'astroturf';
const ButtonBase =
/*#__PURE__*/
styled('button', null, {
  displayName: \\"ButtonBase\\",
  styles: require(\\"./hoist-import-ButtonBase.css\\"),
  attrs: null,
  kebabName: \\"button-base\\",
  camelName: \\"buttonBase\\"
});"
`;

exports[`Plugin imports-css js : Compiled JS 1`] = `
"const styles =
/*#__PURE__*/
require(\\"./imports-css-styles.css\\");"
`;

exports[`Plugin imports-css styles: imports-css-styles.css 1`] = `
"
  .blue {
    color: blue;
  }
"
`;

exports[`Plugin imports-mixed js : Compiled JS 1`] = `
"import styled from 'astroturf';

const styles =
/*#__PURE__*/
require(\\"./imports-mixed-styles.css\\");"
`;

exports[`Plugin imports-mixed styles: imports-mixed-styles.css 1`] = `
"
  .blue {
    color: blue;
  }
"
`;

exports[`Plugin index ButtonBase: index-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.cls1 {
display: inline-flex;
align-items: center;
justify-content: center;
border: 1px solid transparent;
}"
`;

exports[`Plugin index Fixtures: Fixtures.css 1`] = `
".cls1 {
color: ultra-red;
}"
`;

exports[`Plugin index js : Compiled JS 1`] = `
"import styled from 'astroturf';
const ButtonBase =
/*#__PURE__*/
styled('button', null, {
  displayName: \\"ButtonBase\\",
  styles: require(\\"./index-ButtonBase.css\\"),
  attrs: null,
  kebabName: \\"button-base\\",
  camelName: \\"buttonBase\\"
});
export default
/*#__PURE__*/
styled(FancyBox, null, {
  displayName: \\"Fixtures\\",
  styles: require(\\"./Fixtures.css\\"),
  attrs: null,
  kebabName: \\"fixtures\\",
  camelName: \\"fixtures\\"
});"
`;

exports[`Plugin multiple-components FancyBox: multiple-components-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;

@media (min-width: 420px) {
width: 96px;
height: 96px;
}

&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin multiple-components FancyHeader: multiple-components-FancyHeader.css 1`] = `
".cls1 {
color: red;
width: 75px;

&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin multiple-components js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./multiple-components-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const FancyHeader =
/*#__PURE__*/
styled('h2', null, {
  displayName: \\"FancyHeader\\",
  styles: require(\\"./multiple-components-FancyHeader.css\\"),
  attrs: null,
  kebabName: \\"fancy-header\\",
  camelName: \\"fancyHeader\\"
});"
`;

exports[`Plugin no-global js : Compilation Error 1`] = `
"const SIZE = 75;
const styles = less\`
  .foo {
    color: red;
    width: \${SIZE}px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
\`;"
`;

exports[`Plugin pass-options FancierBox: pass-options-FancierBox.css 1`] = `
".cls1 {
color: ultra-red;
}"
`;

exports[`Plugin pass-options FancyBox: pass-options-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;

@media (min-width: 420px) {
width: 96px;
height: 96px;
}

&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin pass-options js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', {
  someOption: true
}, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./pass-options-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const options = {};
const FancierBox =
/*#__PURE__*/
styled(FancyBox, options, {
  displayName: \\"FancierBox\\",
  styles: require(\\"./pass-options-FancierBox.css\\"),
  attrs: null,
  kebabName: \\"fancier-box\\",
  camelName: \\"fancierBox\\"
});"
`;

exports[`Plugin styled FancierBox: styled-FancierBox.css 1`] = `
".cls1 {
color: ultra-red;
}
.cls2 {
composes: cls1;
composes: bar foo from global;
}"
`;

exports[`Plugin styled FancyBox: styled-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;

@media (min-width: 420px) {
width: 96px;
height: 96px;
}

&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin styled js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./styled-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, {
  displayName: \\"FancierBox\\",
  styles: require(\\"./styled-FancierBox.css\\"),
  attrs: null,
  kebabName: \\"fancier-box\\",
  camelName: \\"fancierBox\\"
});"
`;

exports[`Plugin styled-global FancierBox: styled-global-FancierBox.css 1`] = `
".cls1 {
color: ultra-red;
}"
`;

exports[`Plugin styled-global FancyBox: styled-global-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;
&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin styled-global js : Compiled JS 1`] = `
"// prettier-ignore
const FancyBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./styled-global-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, {
  displayName: \\"FancierBox\\",
  styles: require(\\"./styled-global-FancierBox.css\\"),
  attrs: null,
  kebabName: \\"fancier-box\\",
  camelName: \\"fancierBox\\"
});"
`;

exports[`Plugin styled-interpolations FancierBox: styled-interpolations-FancierBox.css 1`] = `
"@value cls1 as a8 from \\"styled-interpolations-FancyBox.css\\";


.cls1 {
color: ultra-red;

> .a8 {
padding: 4em;
}
}"
`;

exports[`Plugin styled-interpolations FancyBox: styled-interpolations-FancyBox.css 1`] = `
"@value item as a6 from \\"styled-interpolations-base.css\\";


.cls1 {
color: red;
width: 75px;

&.a6 {
padding: 5rem;
}

&.primary {
background: white;
color: palevioletred;
}
}
.cls2 {
composes: cls1;
composes: global from global;
composes: other from \\"styled-interpolations-other.css\\";
composes: item from \\"styled-interpolations-base.css\\";
}"
`;

exports[`Plugin styled-interpolations base: styled-interpolations-base.css 1`] = `
"
  .item {
    padding: 4rem;
  }
"
`;

exports[`Plugin styled-interpolations js : Compiled JS 1`] = `
"import styled from 'astroturf';

const base =
/*#__PURE__*/
require(\\"./styled-interpolations-base.css\\");

const other =
/*#__PURE__*/
require(\\"./styled-interpolations-other.css\\");

const FancyBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./styled-interpolations-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const FancierBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancierBox\\",
  styles: require(\\"./styled-interpolations-FancierBox.css\\"),
  attrs: null,
  kebabName: \\"fancier-box\\",
  camelName: \\"fancierBox\\"
});"
`;

exports[`Plugin styled-interpolations other: styled-interpolations-other.css 1`] = `
"@value item as a1 from \\"styled-interpolations-base.css\\";



  .other .a1 {
    margin: 4rem;
  }
"
`;

exports[`Plugin styled-no-assignment js : Compilation Error 1`] = `
"The output of this styled component is never used. Either assign it to a variable or export it.
[0m[31m[1m>[22m[39m[90m 1 | [39mstyled([32m'p'[39m)[32m\`[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m[0m
[0m [90m 2 | [39m[32m  color: blue;[39m[0m
[0m [90m 3 | [39m[32m\`[39m[33m;[39m[0m
[0m [90m 4 | [39m[0m"
`;

exports[`Plugin styled-tag FancierBox: styled-tag-FancierBox.css 1`] = `
".cls1 {
color: ultra-red;
}"
`;

exports[`Plugin styled-tag FancyBox: styled-tag-FancyBox.css 1`] = `
".cls1 {
color: red;
width: 75px;
&.primary {
background: white;
color: palevioletred;
}
}"
`;

exports[`Plugin styled-tag js : Compiled JS 1`] = `
"import s from 'astroturf'; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, {
  displayName: \\"FancyBox\\",
  styles: require(\\"./styled-tag-FancyBox.css\\"),
  attrs: null,
  kebabName: \\"fancy-box\\",
  camelName: \\"fancyBox\\"
});
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, {
  displayName: \\"FancierBox\\",
  styles: require(\\"./styled-tag-FancierBox.css\\"),
  attrs: null,
  kebabName: \\"fancier-box\\",
  camelName: \\"fancierBox\\"
});"
`;

exports[`Plugin with-props RedPasswordInput: with-props-RedPasswordInput.css 1`] = `
".cls1 {
background-color: red;
}"
`;

exports[`Plugin with-props RedPasswordInput2: with-props-RedPasswordInput2.css 1`] = `
".cls1 {
background-color: red;
}"
`;

exports[`Plugin with-props js : Compiled JS 1`] = `
"import { styled } from 'astroturf';
const RedPasswordInput =
/*#__PURE__*/
styled('input', null, {
  displayName: \\"RedPasswordInput\\",
  styles: require(\\"./with-props-RedPasswordInput.css\\"),
  attrs: props => ({ ...props,
    type: 'password'
  }),
  kebabName: \\"red-password-input\\",
  camelName: \\"redPasswordInput\\"
});
const RedPasswordInput2 =
/*#__PURE__*/
styled('input', null, {
  displayName: \\"RedPasswordInput2\\",
  styles: require(\\"./with-props-RedPasswordInput2.css\\"),
  attrs: p => ({
    type: 'password'
  }),
  kebabName: \\"red-password-input-2\\",
  camelName: \\"redPasswordInput2\\"
});"
`;
